# FonRemover

./: .gitignore  CLAUDE.md  MEMORY.md  README.md  project.ini.template  pyproject.toml  requirements.txt
ideas/Idea_001/: Card.md  Decision.md  Idea.md
memory/: feedback_rembg_engine.md  project_one_repo_layout.md
notes/: ai_agent_playbook.md
src/fonremover/: __init__.py  cli.py  core.py
templates/: Card.md  Decision.md  Idea.md
tests/: test_cli.py
